--- a/index.html
+++ b/index.html
@@ -1,10 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="scroll-smooth">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio Tailwind</title>
-    <link href="dist/output.css" rel="stylesheet" />
+    <link href="dist/css/final.css" rel="stylesheet" />
+    <script>
+      if (localStorage.theme === 'dark' || (!('theme' in localStorage) && window.matchMedia('(prefers-color-scheme: dark)').matches)) {
+  document.documentElement.classList.add('dark')
+} else {
+  document.documentElement.classList.remove('dark')
+}
+    </script>
   </head>
   <body>
     <!-- Header Start -->
@@ -22,25 +29,37 @@
             </button>
 
             <nav id="nav-menu" class="hidden absolute py-3 bg-white
-            shadow-lg rounded-lg max-w-[250px] w-full right-4 top-full lg:block lg:static lg:bg-transparent lg:max-w-full lg:shadow-none">
+            shadow-lg rounded-lg max-w-[250px] w-full right-4 top-full lg:block lg:static lg:bg-transparent lg:max-w-full lg:shadow-none lg:dark:bg-transparent dark:bg-dark dark:shadow-slate-500">
               <ul class="block lg:flex lg:rounded-none">
-                <li class="group:">
-                  <a href="#home" class="text-base text-dark py-2 mx-8 flex group-hover:text-primary">Beranda</a>
+                <li class="group">
+                  <a href="#home" class="text-base text-dark py-2 mx-8 flex group-hover:text-primary dark:text-white" >Beranda</a>
                 </li>
-                <li class="group:">
-                  <a href="#about" class="text-base text-dark py-2 mx-8 flex group-hover:text-primary">Tentang Saya</a>
+                <li class="group">
+                  <a href="#about" class="text-base text-dark py-2 mx-8 flex group-hover:text-primary dark:text-white">Tentang Saya</a>
                 </li>
-                <li class="group:">
-                  <a href="#portfolio" class="text-base text-dark py-2 mx-8 flex group-hover:text-primary">Portfolio</a>
+                <li class="group">
+                  <a href="#portfolio" class="text-base text-dark py-2 mx-8 flex group-hover:text-primary dark:text-white">Portfolio</a>
                 </li>
-                <li class="group:">
-                  <a href="#clients" class="text-base text-dark py-2 mx-8 flex group-hover:text-primary">Clients</a>
+                <li class="group">
+                  <a href="#clients" class="text-base text-dark py-2 mx-8 flex group-hover:text-primary dark:text-white">Clients</a>
                 </li>
-                <li class="group:">
-                  <a href="#blog" class="text-base text-dark py-2 mx-8 flex group-hover:text-primary">Blog</a>
+                <li class="group">
+                  <a href="#blog" class="text-base text-dark py-2 mx-8 flex group-hover:text-primary dark:text-white">Blog</a>
                 </li>
-                <li class="group:">
-                  <a href="#contact" class="text-base text-dark py-2 mx-8 flex group-hover:text-primary">Contact</a>
+                <li class="group">
+                  <a href="#contact" class="text-base text-dark py-2 mx-8 flex group-hover:text-primary dark:text-white">Contact</a>
+                </li>
+                <li class="mt-3 lg:mt-0 flex items-center pl-8">
+                  <div class="flex">
+                    <span class="mr-2 text-sm text-slate-500">light</span>
+                    <input type="checkbox" class="hidden" id="dark-toggle">
+                    <label for="dark-toggle">
+                      <div class="flex h-5 w-9 cursor-pointer items-center rounded-full bg-slate-500 p-1">
+                        <div class="toggle-circle h-4 w-4 bg-white rounded-full transition duration-300 ease-in-out"></div>
+                      </div>
+                    </label>
+                    <span class="ml-2 text-sm text-slate-500">dark</span>
+                  </div>
                 </li>
               </ul>
             </nav>
@@ -52,20 +71,20 @@
     <!-- Header End -->
 
     <!-- Hero section start -->
-    <section id="home" class="pt-36">
+    <section id="home" class="pt-30 dark:bg-dark">
       <div class="container">
         <div class="flex flex-wrap">
           <div class="w-full self-center px-4 lg:w-1/2">
-            <h1 class="text-base font-semibold text-primary md:text-xl">Halo Semua 🖐 Teman - teman,saya <span class="block font-bold text-dark text-4xl mt-1 lg:text-5xl">Apa Kabar</span></h1>
-            <h2 class="text-dark font-medium text-secondary text-lg mb-5 lg:text-2xl"><span class="text-rose-400">Tech Enthusiast </span>& Husband</h2>
-            <p class="font-medium text-secondary mb-10 leading-relaxed">Lets pray before todo something for <span class="text-green-300 font-bold"> Better live!</span></p>
+            <h1 class="text-base font-semibold text-primary md:text-xl dark:text-white">Halo Semua 👋 Teman - teman,<span class="block font-bold text-dark text-4xl mt-1 dark:text-white lg:text-5xl">Apa Kabar?</span></h1>
+            <h2 class="text-dark font-medium text-secondary text-lg mb-5 lg:text-2xl dark:text-white"><span class="text-rose-400">Tech Enthusiast </span>& Husband</h2>
+            <p class="font-medium text-secondary mb-10 leading-relaxed">Lets pray before todo something for <span class="text-green-300 font-bold dark:text-white"> Better live!</span></p>
 
             <a href="#" class="text-base font-semibold text-white bg-primary py-3 px-8 rounded-full hover:shadow-lg hover:opacity-80 transition duration-300 ease-in-out">Hubungi Saya</a>
           </div>
           <div class="w-full self-end px-4 lg:w-1/2">
             <div class="relative mt-10 lg:mt-9 lg:right-0">
-              <img src="dist/img/agus_biru.png" alt="Agus" class="max-w-full mx-auto" />
-              <span class="absolute bottom-0 -z-10 left-1/2 -translate-x-1/2 md:scale-125">
+              <img src="dist/img/agus_biru.png" alt="Agus" class="relative z-10 max-w-full mx-auto" />
+              <span class="absolute bottom-0 left-1/2 -translate-x-1/2 md:scale-125">
                 <svg width="400" height="400" viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg">
                   <path
                     fill="#14b8a6"
@@ -82,16 +101,16 @@
     <!-- Hero section end -->
 
     <!-- About section Start -->
-    <section id="about" class="pt-36 pb-32">
+    <section id="about" class="pt-36 pb-32 dark:bg-dark">
       <div class="container">
         <div class="flex flex-wrap">
           <div class="w-full px-4 mb-10 lg:w-1/2">
             <h4 class="font-bold uppercase text-primary text-lg mb-3">Tentang saya</h4>
-            <h2 class="font-bold text-dark text-3xl mb-5 max-w-md lg:text-4xl">Lorem ipsum dolor sit amet consectetur.</h2>
-            <p class="font-medium text-base text-secondary max-w-xl">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta et consectetur quia dolores, perferendis earum iste.</p>
+            <h2 class="font-bold text-dark text-3xl mb-5 max-w-md lg:text-4xl dark:text-white">Lorem ipsum dolor sit amet consectetur.</h2>
+            <p class="font-medium text-base text-secondary max-w-xl dark:text-white">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta et consectetur quia dolores, perferendis earum iste.</p>
           </div>
           <div class="w-full px-4 lg:w-1/2">
-            <h3 class="font-semibold text-dark text-2xl mb-4 lg:pt-10">Mari Berteman</h3>
+            <h3 class="font-semibold text-dark text-2xl mb-4 lg:pt-10 dark:text-white">Mari Berteman</h3>
             <p class="font-medium text-base text-secondary mb-6 lg:text-lg">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laboriosam debitis iure, quisquam ea vel et dicta est saepe.</p>
             <div class="flex items-center">
               <!-- youtube -->
@@ -145,13 +164,13 @@
     <!-- About section End -->
 
    <!-- Portfolio section Start -->
-    <section class="pt-36 pb-16 bg-slate-100" id="portfolio">
+    <section class="pt-36 pb-16 bg-slate-100 dark:bg-slate-800" id="portfolio">
       <div class="container">
         <div class="w-full px-4">
           <div class="max-w-xl mx-auto text-center mb-16">
             <h4 class="font-semibold text-lg text-primary mb-2">Portofolio</h4>
-            <h2 class="font-bold text-dark text-3xl mb-4 sm:text-4xl lg:text-5xl">Projek Terbaru</h2>
-            <p class="font-medium text-md text-secondary md:text-lg">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Omnis optio explicabo facere dolorum blanditiis, nemo expedita est dicta! At, rerum.</p>
+            <h2 class="font-bold text-dark text-3xl mb-4 sm:text-4xl lg:text-5xl dark:text-white">Projek Terbaru</h2>
+            <p class="font-medium text-md text-secondary md:text-lg dark:text-white">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Omnis optio explicabo facere dolorum blanditiis, nemo expedita est dicta! At, rerum.</p>
           </div>
         </div>
 
@@ -160,29 +179,29 @@
             <div class="rounded-medium shadow-md overflow-hidden">
               <img src="dist/img/portfolio/1.png" alt="landing page" width="w-full">
             </div>
-            <h3 class="font-semibold text-xl text-dark mt-5 mb-3">Landing Page P-trash</h3>
-            <p class="font-medium text-base text-secondary">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Libero optio suscipit corrupti sequi, magnam reprehenderit cumque non sit esse aliquam!</p>
+            <h3 class="font-semibold text-xl text-dark mt-5 mb-3 dark:text-white">Landing Page P-trash</h3>
+            <p class="font-medium text-base text-secondary dark:text-white">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Libero optio suscipit corrupti sequi, magnam reprehenderit cumque non sit esse aliquam!</p>
           </div>
           <div class="mb-12 p-4 md:w-1/2">
             <div class="rounded-medium shadow-md overflow-hidden">
               <img src="dist/img/portfolio/2.png" alt="Landing Page Project" width="w-full">
             </div>
-            <h3 class="font-semibold text-xl text-dark mt-5 mb-3">Landing Page Project</h3>
-            <p class="font-medium text-base text-secondary">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Libero optio suscipit corrupti sequi, magnam reprehenderit cumque non sit esse aliquam!</p>
+            <h3 class="font-semibold text-xl text-dark mt-5 mb-3 dark:text-white">Landing Page Project</h3>
+            <p class="font-medium text-base text-secondary dark:text-white">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Libero optio suscipit corrupti sequi, magnam reprehenderit cumque non sit esse aliquam!</p>
           </div>
           <div class="mb-12 p-4 md:w-1/2">
             <div class="rounded-medium shadow-md overflow-hidden">
               <img src="dist/img/portfolio/3.png" alt="Technical Documentation" width="w-full">
             </div>
-            <h3 class="font-semibold text-xl text-dark mt-5 mb-3">Technical Documentation</h3>
-            <p class="font-medium text-base text-secondary">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Libero optio suscipit corrupti sequi, magnam reprehenderit cumque non sit esse aliquam!</p>
+            <h3 class="font-semibold text-xl text-dark mt-5 mb-3 dark:text-white">Technical Documentation</h3>
+            <p class="font-medium text-base text-secondary dark:text-white">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Libero optio suscipit corrupti sequi, magnam reprehenderit cumque non sit esse aliquam!</p>
           </div>
           <div class="mb-12 p-4 md:w-1/2">
             <div class="rounded-medium shadow-md overflow-hidden">
               <img src="dist/img/portfolio/4.png" alt="Tribute Page" width="w-full">
             </div>
-            <h3 class="font-semibold text-xl text-dark mt-5 mb-3">Tribute Page</h3>
-            <p class="font-medium text-base text-secondary">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Libero optio suscipit corrupti sequi, magnam reprehenderit cumque non sit esse aliquam!</p>
+            <h3 class="font-semibold text-xl text-dark mt-5 mb-3 dark:text-white">Tribute Page</h3>
+            <p class="font-medium text-base text-secondary dark:text-white">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Libero optio suscipit corrupti sequi, magnam reprehenderit cumque non sit esse aliquam!</p>
           </div>
         </div>
       </div>
@@ -190,12 +209,12 @@
    <!-- Portfolio section End -->
 
    <!-- Client Section Start -->
-    <section id="clients" class="pt-36 pb-32 bg-slate-800">
+    <section id="clients" class="pt-36 pb-32 bg-slate-800 dark:bg-slate-300">
       <div class="container">
         <div class="w-ful px-4">
           <div class=" mx-auto text-center mb-16">
             <h4 class="font-semibold text-lg text-primary mb-2">Clients</h4>
-            <h2 class="font-bold text-white text-3xl mb-4 sm:text-4xl lg:text-5xl">Yang Pernah Bekerjasama</h2>
+            <h2 class="font-bold text-white text-3xl mb-4 sm:text-4xl lg:text-5xl dark:text-dark">Yang Pernah Bekerjasama</h2>
             <p class="font-medium text-md text-secondary md:text-lg">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Temporibus veritatis consequuntur repellendus?</p>
           </div>
         </div>
@@ -221,23 +240,23 @@
    <!-- Client Section End -->
 
    <!-- Blog Section Start -->
-    <section id="blog" class="pt-36 pb-32 bg-slate-100">
+    <section id="blog" class="pt-36 pb-32 bg-slate-100 dark:bg-dark">
       <div class="container">
         <div class="w-full px-4">
           <div class="max-w-xl mx-auto text-center mb-16">
             <h4 class="font-semibold text-lg text-primary mb-2">Blog</h4>
-            <h2 class="font-bold text-dark text-3xl mb-4 sm:text-4xl lg:text-5xl">Tulisan Terkini</h2>
+            <h2 class="font-bold text-dark text-3xl mb-4 sm:text-4xl lg:text-5xl dark:text-white">Tulisan Terkini</h2>
             <p class="font-medium text-md text-secondary md:text-lg">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Suscipit voluptatem quibusdam saepe voluptatibus?</p>
           </div>
         </div>
         <div class="flex flex-wrap">
           <div class="w-full px-4 lg:w-1/2 xl:w-1/3">
-            <div class="bg-white rounded-xl shadow-lg overflow-hidden mb-10">
+            <div class="bg-white rounded-xl shadow-lg overflow-hidden mb-10 dark:bg-slate-800">
               <img src="https://source.unsplash.com/360x200?mechanical+keyboard" alt="Mechanical Keyboard" class="w-full">
 
               <div class="py-8 px-6">
                 <h3>
-                  <a href="#" class="block mb-3 font-semibold text-xl text-dark hover:text-primary truncate">Review
+                  <a href="#" class="dark:text-white block mb-3 font-semibold text-xl text-dark hover:text-primary truncate">Review
                     Keyboard GMMK Pro
                   </a>
                 </h3>
@@ -249,12 +268,12 @@
             </div>
           </div>
           <div class="w-full px-4 lg:w-1/2 xl:w-1/3">
-            <div class="bg-white rounded-xl shadow-lg overflow-hidden mb-10">
+            <div class="bg-white rounded-xl shadow-lg overflow-hidden mb-10 dark:bg-slate-800">
               <img src="https://source.unsplash.com/360x200?coffee" alt="Coffee" class="w-full">
 
               <div class="py-8 px-6">
                 <h3>
-                  <a href="#" class="block mb-3 font-semibold text-xl text-dark hover:text-primary truncate">Nikmati Secangkir Kopi</a>
+                  <a href="#" class="dark:text-white block mb-3 font-semibold text-xl text-dark hover:text-primary truncate">Nikmati Secangkir Kopi</a>
                 </h3>
                 <p class="font-medium text-base text-secondary mb-6">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsam perspiciatis cumque laborum vero debitis ratione veritatis.</p>
                 <a href="#" class="font-medium text-sm text-white bg-primary
@@ -264,12 +283,12 @@
             </div>
           </div>
           <div class="w-full px-4 lg:w-1/2 xl:w-1/3">
-            <div class="bg-white rounded-xl shadow-lg overflow-hidden mb-10">
+            <div class="bg-white rounded-xl shadow-lg overflow-hidden mb-10 dark:bg-slate-800">
               <img src="https://source.unsplash.com/360x200?programming" alt="Programming" class="w-full">
 
               <div class="py-8 px-6">
                 <h3>
-                  <a href="#" class="block mb-3 font-semibold text-xl text-dark hover:text-primary truncate">Tips Belajar Programming</a>
+                  <a href="#" class="dark:text-white block mb-3 font-semibold text-xl text-dark hover:text-primary truncate">Tips Belajar Programming</a>
                 </h3>
                 <p class="font-medium text-base text-secondary mb-6">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Delectus, ut? Commodi, temporibus sapiente!</p>
                 <a href="#" class="font-medium text-sm text-white bg-primary
@@ -284,12 +303,12 @@
    <!-- Blog Section End -->
 
     <!-- Contact Section Start -->
-    <section id="contact" class="pt-36 pb-32">
+    <section id="contact" class="pt-36 pb-32 dark:bg-slate-800">
       <div class="container">
         <div class="w-full px-4">
           <div class="max-w-xl mx-auto text-center mb-16">
             <h4 class="font-semibold text-lg text-primary mb-2">Contact</h4>
-            <h2 class="font-bold text-dark text-3xl mb-4 sm:text-4xl lg:text-5xl">Hubungi Kami</h2>
+            <h2 class="font-bold text-dark text-3xl mb-4 sm:text-4xl lg:text-5xl dark:text-white">Hubungi Kami</h2>
             <p class="font-medium text-md text-secondary md:text-lg">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Incidunt, ratione.</p>
           </div>
         </div>
@@ -419,7 +438,12 @@
     </footer>
     <!-- Footer End -->
 
+  <!-- Back to top Start -->
+    <a href="#home" class="hidden fixed bottom-4 justify-center items-center right-4 p-4 z-[999] h-14 w-14 bg-primary rounded-full hover:animate-pulse" id="to-top">
+      <span class="mt-2 block h-5 border-t-2 w-5 border-l-2 rotate-45"></span>
+    </a>
 
+  <!-- Back to top End -->
 
     <script src="dist/js/script.js"></script>
   </body>
